# Prompt-Lifecycle-Experimentation-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: metadata.db
artifacts/evaluations/: support_classifier_baseline.json  support_classifier_candidate.json
artifacts/experiments/: support_classifier_tournament.json
artifacts/registry/executive_summary/aliases/: development.json
artifacts/registry/executive_summary/versions/: v1.json  v2.json  v3.json
artifacts/registry/support_classifier/aliases/: candidate.json  development.json  latest.json  staging.json
artifacts/registry/support_classifier/versions/: v1.json  v2.json  v3.json  v4.json  v5.json  v6.json
configs/environments/: ci-smoke.yaml  dev.yaml  local-demo.yaml
configs/experiments/: support_classifier_ab.yaml  support_classifier_tournament.yaml
configs/policies/: promotion.yaml
configs/pricing/: default.yaml
configs/prompts/: executive_summary_v1.yaml  support_classifier_v1.yaml  support_classifier_v2.yaml
configs/thresholds/: default.yaml
data/golden/: executive_summary.jsonl  support_classifier.jsonl
docker/: Dockerfile
src/prompt_platform/: __init__.py  abtesting.py  cli.py  config.py  demo.py  evaluation.py  experiments.py  model_backends.py  observability.py  promotion.py  registry.py  regression.py  reports.py  runtime.py  schemas.py  storage.py  utils.py
tests/: test_ab_cli_storage.py  test_evaluation.py  test_experiment_regression_promotion.py  test_registry.py  test_runtime.py
